--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>10.1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-slf4j</artifactId>
+            <version>9.3.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
